# python-poetry-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.__directory_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
